@@ -1,8 +1,7 @@
 <h2><%=l(:label_custom_field_new)%> (<%=l(@custom_field.type_name)%>)</h2>
 
-<%= start_form_tag({:action => 'new'}, :class => "tabular") %>
-  <%= render :partial => 'form', :locals => { :type => @custom_field.type } %>
-  <%= hidden_field_tag 'type', @custom_field.type %>
-  <%= submit_tag l(:button_save) %>
-<%= end_form_tag %>
-
+<% labelled_tabular_form_for :custom_field, @custom_field, :url => { :action => "new" } do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<%= hidden_field_tag 'type', @custom_field.type %>
+<%= submit_tag l(:button_save) %>
+<% end %>
